--- a/Angular_cafe_Mgm/Cafe-app/src/app/menu/menu.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/menu/menu.component.html
@@ -24,7 +24,7 @@
                     <div class="box">
                         <div>
                             <div class="img-box">
-                                <img src="/assets/images/f{{p.ProductId}}.png" alt={{p.Name}}>
+                                <img [src]="p.ImageUrl" [alt]="p.Name">
                             </div>
                             <div class="detail-box">
                                 <h5>
