home component added

--- a/Angular_cafe_Mgm/Cafe-app/src/app/app.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="container">
-  <app-menu></app-menu>
-</div>
+<!-- <div class="container">
+  <app-home></app-home>
+</div> -->
+ 
+<router-outlet>
+  <app-nav></app-nav>
+    
+  <app-home></app-home>
+</router-outlet>
