--- a/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
@@ -5,15 +5,13 @@
                 <img src="assets\cafeIcon.jfif" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
               </a>
             <a class="navbar-brand" routerLink="/">Cafe</a>
-            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
+            
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" routerLink="/">Home</a>
                     <a class="nav-link" routerLink="menu">Menu</a>
-                    <a class="nav-link" routerLink="cate">Categaries</a>
                     <a class="nav-link" routerLink="contact">Contact</a>
+                    <a class="nav-link" routerLink="payment">Payment</a>
                 </div>
             </div>
         </div>
