--- a/Angular_cafe_Mgm/Cafe-app/src/app/app.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/app.component.html
@@ -1,9 +1,17 @@
 <!-- <div class="container">
   <app-home></app-home>
 </div> -->
- 
+<!--  
 <router-outlet>
   <app-nav></app-nav>
     
   <app-home></app-home>
-</router-outlet>
+</router-outlet> -->
+
+
+<div >
+  <app-nav></app-nav>
+  <router-outlet />
+</div>
+
+ 
