--- a/Angular_cafe_Mgm/Cafe-app/src/app/app.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div class="container">
+<!-- <div class="container">
   <app-menu></app-menu>
-</div>
+</div> -->
+<!-- <router-outlet /> -->
+ <!-- <app-dashboard></app-dashboard> -->
+  <!-- <app-login></app-login> -->
+ <router-outlet />
