Role based Auth needs to be completed

--- a/Angular_cafe_Mgm/Cafe-app/src/app/home/home.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<app-nav></app-nav>
 <div class="bg-dark bg-gradient">
 
 <!-- top page --carousel effect -->
@@ -163,6 +163,8 @@
         </div>
     </footer>         
 </div>
+
+
 
 
   
