--- a/Angular_cafe_Mgm/Cafe-app/src/app/menu/menu.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/menu/menu.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+
 <section class="food_section layout_padding-bottom">
     <div class="container">
         <div class="heading_container heading_center">
