--- a/Angular_cafe_Mgm/Cafe-app/src/app/cart/cart.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+<app-nav></app-nav>
 <section class="h-100 gradient-custom">
     <div class="container py-5">
         <div class="heading_container heading_center">
