--- a/Angular_cafe_Mgm/Cafe-app/src/app/feedback/feedback.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/feedback/feedback.component.html
@@ -1,3 +1,5 @@
+<app-nav></app-nav>
+
 <section class="book_section layout_padding">
     <div class="container">
       <div class="heading_container">
