--- a/Angular_cafe_Mgm/Cafe-app/src/app/homo/homo.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/homo/homo.component.html
@@ -3,7 +3,7 @@
     <div class="bg-box im">
         <img src="assets/hero-bg.jpg" class="im1" alt="">
       </div>
-      <app-header></app-header>
+      <app-nav></app-nav>
 
       
       <section class="slider_section">
@@ -17,7 +17,7 @@
                       <h1>{{ slide.title }}</h1>
                       <p>{{ slide.description }}</p>
                       <div class="btn-box">
-                        <a href="{{ slide.link }}" class="btn1">Order Now</a>
+                        <a routerLink="/menu" class="btn1">Order Now</a>
                       </div>
                     </div>
                   </div>
@@ -50,7 +50,7 @@
           <div class="col-md-6   "   *ngFor="let c of csrv.cList" >
             <div class="box ">
               <div class="img-box">
-                <img src="assets/images/{{c.CategoryId}}.png" alt="">
+                <img [src]="c.ImageUrl" alt="">
               </div>
               <div class="detail-box">
                 <h5>
@@ -59,7 +59,7 @@
                 <h6>
                   <span>20%</span> Off
                 </h6>
-                <a href="">
+                <a routerLink="/menu">
                   Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                     <g>
                       <g>
@@ -124,7 +124,7 @@
 
 
 
-  <app-about></app-about>
+  <!-- <app-about></app-about> -->
 
 
 
