payment component added with service

--- a/Angular_cafe_Mgm/Cafe-app/src/app/cart/cart.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/cart/cart.component.html
@@ -83,8 +83,8 @@
                 </li>
               </ul>
   
-              <a routerLink="/checkout" class="btn btn-dark btn-lg btn-block">
-                Go to checkout
+              <a routerLink="/payment" class="btn btn-dark btn-lg btn-block">
+                 Proceed To Pay
               </a>
             </div>
           </div>
