--- a/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
               <a class="nav-link" routerLink="/about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/feedback">Contact</a>
+              <a class="nav-link" routerLink="/feedback">FeedBack</a>
             </li>
           </ul>
           <div class="user_option">
