--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
@@ -100,7 +100,7 @@
                                 <!-- <i class="bi bi-tag" [class.bg-success.subtle]="CategoryName.valid" 
                                 [class.bg-danger]="CategoryName.invalid && CategoryName.touched"></i> -->
                                 <input type="text" class="form-control" name="Name" #Name="ngModel"
-                                 [(ngModel)]="CategoriesService.categoryData.Name" placeholder="Category Name" required>
+                                 [(ngModel)]="objService.cData.Name" placeholder="Category Name" required>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                                 <!-- <i class="bi bi-image" [class.bg-success.subtle]="ImageUrl.valid" 
                                 [class.bg-danger]="ImageUrl.invalid && ImageUrl.touched"></i> -->
                                 <input type="url" class="form-control" name="ImageUrl" #ImageUrl="ngModel"
-                                 [(ngModel)]="CategoriesService.categoryData.ImageUrl" placeholder="Image URL" required>
+                                 [(ngModel)]="objService.cData.ImageUrl" placeholder="Image URL" required>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                 <div class="form-group">
                     <div class="input-group">
                         <div class="input-group-text">
-                            <input type="checkbox" class="form-check-input" name="IsActive" [(ngModel)]="CategoriesService.categoryData.IsActive">
+                            <input type="checkbox" class="form-check-input" name="IsActive" [(ngModel)]="objService.cData.IsActive">
                             <label class="form-check-label">Is Active</label>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                                 <!-- <i class="bi bi-calendar" [class.bg-success.subtle]="CreatedDate.valid" 
                                 [class.bg-danger]="CreatedDate.invalid && CreatedDate.touched"></i> -->
                                 <input type="date" class="form-control" name="CreatedDate" #CreatedDate="ngModel"
-                                 [(ngModel)]="CategoriesService.categoryData.CreatedDate" required>
+                                 [(ngModel)]="objService.cData.CreatedDate" required>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
             
                 <div class="form-group">
                     <button class="btn btn-success btn-lg" type="submit">
-                        <i class="bi bi-plus-circle"></i>Create Category
+                        <i class="bi bi-plus-circle"></i>Create/Update Category
                     </button>
                 </div>
             
