--- a/Angular_cafe_Mgm/Cafe-app/src/app/display/display.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/display/display.component.html
@@ -7,7 +7,7 @@
             <th>IsActive</th>
             <th>Created Date</th>
             <th>Delete</th>
-            <th>Select</th>
+            <th>Edit</th>
 
         </tr>
     </thead>
@@ -15,10 +15,10 @@
         <tr *ngFor="let p of objs.cList">
             <td>{{p.CategoryId}}</td>
             <td>{{p.Name}}</td>
-            <td>{{p.ImageUrl}}</td>
+            <td><img src="{{p.ImageUrl}}" alt="not found"></td>
             <td>{{p.IsActive}}</td>
            <td>{{p.CreatedDate}}</td>
-           <td><i class="bi bi-trash3" (click)="onDelete(p.CategoryId)"></i></td>
+           <td><i class="bi bi-trash3" (click)="onDelete(p)"></i></td>
            <td><i class="bi bi-pencil-square" (click)="fillData(p)"></i></td>
            
         </tr>
