--- a/Angular_cafe_Mgm/Cafe-app/src/app/login/login.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/login/login.component.html
@@ -1,10 +1,13 @@
+
+<app-nav></app-nav>
+
 <div class="outer">
     <div class="container">
         <div class="row">
             <div class="offset-md-2 col-lg-5 col-md-7 offest-lg-4 offset-md-3">
                 <div class="panel border bg-white">
                     <div class="panel-heading">
-                        <h3 class="pt-3 font-weight-bold">Login</h3>
+                        <h3  style="font-family: 'Dancing Script', cursive;">Login</h3>
                     </div>
                     <div class="panel-body p-3">
                         <form [formGroup]="loginForm">
@@ -36,3 +39,9 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
+
+
+
+
