--- a/Angular_cafe_Mgm/Cafe-app/src/app/signup/signup.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/signup/signup.component.html
@@ -1,10 +1,12 @@
+<app-nav></app-nav>
+
 <div class="outer">
     <div class="container">
         <div class="row">
             <div class="offset-md-2 col-lg-5 col-md-7 offest-lg-4 offset-md-3">
                 <div class="panel border bg-white">
                     <div class="panel-heading">
-                        <h3 class="pt-3 font-weight-bold">Sign Up</h3>
+                        <h3 class="pt-3 font-weight-bold" style="font-family: 'Dancing Script',cursive;">Sign Up</h3>
                     </div>
                     <div class="panel-body p-3">
                         <form [formGroup]="signUpForm" >
@@ -86,3 +88,6 @@
         </div>
     </div>
 </div>
+
+
+<app-footer></app-footer>
