--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
@@ -1,11 +1,11 @@
-<!-- <div>
+<div>
     <nav class="navbar navbar-dark bg-dark justify-content-center">
       <a class="navbar-brand mx-auto" style="color: white; text-align: center;"><h2><b>CAFE  ADMIN</b></h2></a>
       <form class="form-inline" style="position: absolute; right: 20px;">
         <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
       </form>
     </nav>
-  </div> -->
+  </div>
 
 
   
@@ -57,81 +57,40 @@
                 
                 </div>
             </div>
-            <div class="col py-3">                 
+            <div class="col py-3">
+            
+
+                 
+                <table class="table table-hover table-dark table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Category ID</th>
+                            <th>Category Name</th>
+                            <th>Image</th>
+                            <th>IsActive</th>
+                            <th>Created Date</th>
+                            <th>Delete</th>
+                            <th>Select</th>
                 
-                <app-display></app-display>
-            </div>            
-        <div class="col">
-
-
-            <h1>Register Categaries</h1>
-
-            <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
-
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text bg-white text-warning">
-                                <!-- <i class="bi bi-tag" [class.bg-success.subtle]="CategoryName.valid" 
-                                [class.bg-danger]="CategoryName.invalid && CategoryName.touched"></i> -->
-                                <input type="text" class="form-control" name="Name" #Name="ngModel"
-                                 [(ngModel)]="objService.cData.Name" placeholder="Category Name" required>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text bg-white text-warning">
-                                <!-- <i class="bi bi-image" [class.bg-success.subtle]="ImageUrl.valid" 
-                                [class.bg-danger]="ImageUrl.invalid && ImageUrl.touched"></i> -->
-                                <input type="url" class="form-control" name="ImageUrl" #ImageUrl="ngModel"
-                                 [(ngModel)]="objService.cData.ImageUrl" placeholder="Image URL" required>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-text">
-                            <input type="checkbox" class="form-check-input" name="IsActive" [(ngModel)]="objService.cData.IsActive">
-                            <label class="form-check-label">Is Active</label>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text bg-white text-warning">
-                                <!-- <i class="bi bi-calendar" [class.bg-success.subtle]="CreatedDate.valid" 
-                                [class.bg-danger]="CreatedDate.invalid && CreatedDate.touched"></i> -->
-                                <input type="date" class="form-control" name="CreatedDate" #CreatedDate="ngModel"
-                                 [(ngModel)]="objService.cData.CreatedDate" required>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="form-group">
-                    <button class="btn btn-success btn-lg" type="submit">
-                        <i class="bi bi-plus-circle"></i>Create/Update Category
-                    </button>
-                </div>
-            
-            </form>
-            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let p of objs.cList">
+                            <td>{{p.CategoryId}}</td>
+                            <td>{{p.Name}}</td>
+                            <td>  <img [src]="p.ImageUrl" [alt]="p.Name"> </td>
+                            <td>{{p.IsActive}}</td>
+                           <td>{{p.CreatedDate}}</td>
+                           <td><i class="bi bi-trash3" (click)="onDelete(p.CategoryId)"></i></td>
+                           <td><i class="bi bi-pencil-square" (click)="fillData(p)"></i></td>
+                           
+                        </tr>
+                    </tbody>
+                </table>
 
 
 
-
-
-        </div>
+            </div>
         </div>
     </div>
   
-
- 
