--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/products/products.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/products/products.component.html
@@ -1,11 +1,4 @@
-<div>
-    <nav class="navbar navbar-dark bg-dark justify-content-center">
-      <a class="navbar-brand mx-auto" style="color: white; text-align: center;"><h2><b>CAFE  ADMIN</b></h2></a>
-      <form class="form-inline" style="position: absolute; right: 20px;">
-        <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Login/Logout</button>
-      </form>
-    </nav>
-  </div>
+<app-adminnav></app-adminnav>
 
 
   
@@ -68,10 +61,9 @@
                             <th>ImageUrl</th>
                             <th>IsActive</th>
                             <th>Qty</th>
-                            <!-- <th>Description</th> -->
+                        
                             <th>Price</th>
-                            <!-- <th>Created Date</th> -->
-                            <!-- <th>Category</th> -->
+                           
                             <th>Delete</th>
                             <th>Select</th>  
                 
@@ -81,7 +73,7 @@
                         <tr *ngFor="let p of objs.pList">
                             <td>{{p.ProductId}}</td>
                             <td>{{p.Name}}</td>
-                            <td>  <img [src]="p.ImageUrl" [alt]="p.Name"> </td>
+                            <td>  <img [src]= p.ImageUrl [alt]="p.Name"> </td>
                             <td>{{p.IsActive}}</td>
                            <td>{{p.Quantity}}</td>
                            <!-- <td>{{p.Description}}</td> -->
@@ -111,10 +103,6 @@
                            [(ngModel)]="objs.pData.Name" placeholder="Product Name" required>
                   </div>
                 
-                  <!-- <div class="form-group">
-                    <textarea class="form-control" name="Description" 
-                              [(ngModel)]="objs.pData.Description" placeholder="Product Description"></textarea>
-                  </div> -->
                 
                   <div class="form-group">
                     <input type="number" class="form-control" name="Price" 
@@ -126,28 +114,28 @@
                            [(ngModel)]="objs.pData.Quantity" placeholder="Quantity" required>
                   </div>
                 
-                  <div class="form-group">
-                    <input type="url" class="form-control" name="ImageUrl" 
-                           [(ngModel)]="objs.pData.ImageUrl" placeholder="Image URL" required>
-                  </div>
+              
+                  <div class="form-group pt-3">
+                    <label for="imageUpload" class="font-weight-bold">Upload Image</label>
+                    <div class="input-field">
+                        <input type="file" (change)="onFileSelected($event)" />
+                    </div>
+                </div>
                 
-                  <!-- <div class="form-group">
-                    <select class="form-control" name="CategoryId" [(ngModel)]="objs.pData.CategoryId" required>
-                      <option *ngFor="let category of categories" [value]="category.CategoryId">
-                        {{ category.Name }}
-                      </option>
+        
+
+                  <div class="form-group">
+                    <label for="category">Category</label>
+                    <select class="form-control" name="CategoryId" [(ngModel)]="obj.pData.CategoryId" required>
+                      <option *ngFor="let category of obj.categoryList" [value]="category.CategoryId">{{ category.Name }}</option>
                     </select>
+
+                    <div *ngIf="form.submitted && form.controls['CategoryId']?.invalid" class="text-danger">
+                        Category is required
+                      </div>
+
                   </div>
-                 -->
-                  <!-- <div class="form-group">
-                    <input type="checkbox" name="IsActive" [(ngModel)]="objs.pData.IsActive">
-                    <label>Is Active</label>
-                  </div> -->
-                
-                  <div class="form-group">
-                    <input type="date" class="form-control" name="CreatedDate" 
-                           [(ngModel)]="objs.pData.CreatedDate">
-                  </div>
+
                 
                   <div class="form-group">
                     <button class="btn btn-success btn-lg" type="submit">
