--- a/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/nav/nav.component.html
@@ -29,7 +29,7 @@
             </li>
           </ul>
           <div class="user_option">
-            <a href="" class="user_link">
+            <a routerLink="/user" class="user_link">
               <i class="fa fa-user" aria-hidden="true"></i>
             </a>
             <a class="cart_link" routerLink="/cart">
