--- a/Angular_cafe_Mgm/Cafe-app/src/app/payment/payment.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/payment/payment.component.html
@@ -6,10 +6,10 @@
             <input type="text" id="name" name="name" class="form-control" ngModel placeholder="Enter your name" required>
         </div>
 
-        <div class="mb-3">
+        <!-- <div class="mb-3">
             <label for="address" class="form-label">Address</label>
             <input type="text" id="address" name="address" class="form-control" ngModel placeholder="Enter your address" required>
-        </div>
+        </div> -->
 
         <div class="mb-3">
             <label for="paymentMode" class="form-label">Payment Mode</label>
