Purchase History added

--- a/Angular_cafe_Mgm/Cafe-app/src/app/signup/signup.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/signup/signup.component.html
@@ -21,7 +21,7 @@
 
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['username'].dirty && signUpForm.hasError('required', 'username')">
-                                    <span class="fa fa-user p-2"></span>
+                                    <span class="bi bi-person-badge-fill p-2"></span>
                                     <input formControlName="username" type="text" placeholder="Username">
                                 </div>
                             </div>
@@ -29,7 +29,7 @@
 
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['mobile'].dirty && signUpForm.hasError('required', 'mobile')">
-                                    <span class="fa fa-user p-2"></span>
+                                    <span class="bi bi-telephone-fill p-2"></span>
                                     <input formControlName="mobile" type="text" placeholder="Mobile">
                                 </div>
                             </div>
@@ -37,7 +37,7 @@
 
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['email'].dirty && signUpForm.hasError('required', 'email')">
-                                    <span class="fa fa-user p-2"></span>
+                                    <span class="bi bi-envelope-fill p-2"></span>
                                     <input formControlName="email" type="text" placeholder="Email">
                                 </div>
                             </div>
@@ -45,7 +45,7 @@
 
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['address'].dirty && signUpForm.hasError('required', 'address')">
-                                    <span class="fa fa-user p-2"></span>
+                                    <span class="bi bi-house-door-fill p-2"></span>
                                     <input formControlName="address" type="text" placeholder="Address">
                                 </div>
                             </div>
@@ -53,7 +53,7 @@
 
                             <div class="form-group pt-3">
                                 <div class="input-field" [class.error]="signUpForm.controls['postcode'].dirty && signUpForm.hasError('required', 'postcode')">
-                                    <span class="fa fa-user p-2"></span>
+                                    <span class="bi bi-mailbox2 p-2"></span>
                                     <input formControlName="postcode" type="text" placeholder="Postal Code">
                                 </div>
                             </div>
