--- a/Angular_cafe_Mgm/Cafe-app/src/app/user/user.component.css
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/user/user.component.css
@@ -1,5 +1,7 @@
 
 .profile-card {
+  margin-top: 60px;
+  margin-bottom: 60px;
     background-color: #fff;
     border-radius: 20px;
     overflow: hidden;
