--- a/Angular_cafe_Mgm/Cafe-app/src/app/user/user.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/user/user.component.html
@@ -1,129 +1,5 @@
 <app-nav></app-nav>
 
-<!-- <div class="container">
-    <div class="main-body">
-    
-          <div class="row gutters-sm">
-            <div class="col-md-4 mb-3" >
-              <div class="card">
-                <div class="card-body">
-                  <div class="d-flex flex-column align-items-center text-center">
-                    <img src="https://th.bing.com/th?id=OIP.IGNf7GuQaCqz_RPq5wCkPgHaLH&w=204&h=306&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" alt="Admin" class="rounded-circle" width="150">
-                    <div class="mt-3">
-                      <h4>Sam</h4>
-         
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mt-3">
-
-              </div>
-            </div>
-            <div >
-              <div class="card mb-3">
-                <div class="card-body">
-
-                  <div class="row" >
-                    <div class="col-sm-3">
-                      <h6 class="mb-0" style="font-size: larger;">Full Name</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary" >
-                 
-                      
-
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Username</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                   sam123
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Mobile</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      (239) 816-9029
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Email</h6>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      samgmail
-                    </div>
-                  </div>
-                  <hr>
-
-                  <div class="row">
-
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Address</h6>
-                    </div>
-
-                    <div class="col-sm-9 text-secondary">
-                      Bay Area, San Francisco, CA
-                    </div>
-
-                  </div>
-
-                  <hr>
-
-                  <div class="row">
-
-                    <div class="col-sm-3">
-                      <h6 class="mb-0">Postal Code</h6>
-                    </div>
-
-                    <div class="col-sm-9 text-secondary">
-                      Bay Area, San Francisco, CA
-                    </div>
-
-                  </div>
-
-      
-
-             
-                </div>
-              </div>
-
-
-
-
-            </div>
-          </div>
-
-        </div>
-    </div> -->
-
-    <!-- <div *ngIf="user">
-      <div class="profile-card">
-        <div class="profile-image">
-          <img [src]="user.ImageUrl || 'assets/default-profile.png'" alt="{{user.Name}}">
-        </div>
-        <div class="profile-details">
-          <h2>{{ user.Name }}</h2>
-          <p><strong>Username:</strong> {{ user.Username }}</p>
-          <p><strong>Email:</strong> {{ user.Email }}</p>
-          <p><strong>Mobile:</strong> {{ user.Mobile }}</p>
-          <p><strong>Address:</strong> {{ user.Address }}</p>
-          <p><strong>Post Code:</strong> {{ user.PostCode }}</p>
-        </div>
-      </div>
-    </div>
-    
-    <div *ngIf="!user">
-      <p>Loading user data...</p>
-    </div> -->
-
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-6">
@@ -145,7 +21,7 @@
               </div>
     
               <!-- Edit Profile Button -->
-              <button class="btn btn-primary mt-3">Edit Profile</button>
+              <button class="btn btn-primary mt-3" routerLink="/purchase">Purchase History</button>
             </div>
           </div>
         </div>
