--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/products/products.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/products/products.component.html
@@ -113,7 +113,11 @@
                     <input type="number" class="form-control" name="Quantity" 
                            [(ngModel)]="objs.pData.Quantity" placeholder="Quantity" required>
                   </div>
-                
+
+                 <div class="form-group">
+                    <input type="textarea" class="form-control" name="Description" 
+                           [(ngModel)]="objs.pData.Description" placeholder="Description" required>
+                  </div>
               
                   <div class="form-group pt-3">
                     <label for="imageUpload" class="font-weight-bold">Upload Image</label>
