--- a/Angular_cafe_Mgm/Cafe-app/src/app/homo/homo.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/homo/homo.component.html
@@ -3,6 +3,7 @@
     <div class="bg-box im">
         <img src="assets/hero-bg.jpg" class="im1" alt="">
       </div>
+      
       <app-nav></app-nav>
 
       
@@ -124,11 +125,6 @@
 
 
 
-  <!-- <app-about></app-about> -->
-
-
-
-
   <!-- client section -->
 <section class="client_section layout_padding-bottom">
     <div class="container">
@@ -154,7 +150,7 @@
               </div>
               <div class="img-box">
             
-              <img src="assets/images/client1.jpg" alt="" class="box-img">            
+              <img src="assets/client1.jpg" alt="" class="box-img" style="border-radius: 50%;">            
               </div>
             </div>
           </div>
@@ -164,102 +160,4 @@
   </section>
   <!-- end client section -->
   
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <footer class="footer_section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 footer-col">
-          <div class="footer_contact">
-            <h4>
-              Contact Us
-            </h4>
-            <div class="contact_link_box">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call +01 1234567890
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span>
-                  democom
-                </span>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 footer-col">
-          <div class="footer_detail">
-            <a href="" class="footer-logo">
-              Feane
-            </a>
-            <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
-            </p>
-            <div class="footer_social">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-pinterest" aria-hidden="true"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 footer-col">
-          <h4>
-            Opening Hours
-          </h4>
-          <p>
-            Everyday
-          </p>
-          <p>
-            10.00 Am -10.00 Pm
-          </p>
-        </div>
-      </div>
-      <div class="footer-info">
-        <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
-          &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">Code Runner</a>
-        </p>
-      </div>
-    </div>
-  </footer>
+<app-footer></app-footer>
