--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
@@ -108,7 +108,7 @@
                         <div class="card text-center mb-4">
                           <div class="card-body">
                             <h5 class="card-title">Users</h5>
-                            <p class="card-text">7</p>
+                            <p class="card-text">{{ul}}</p>
                             <a href="#" class="btn btn-primary">View Details</a>
                           </div>
                         </div>
