--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/dashboard/dashboard.component.html
@@ -117,7 +117,7 @@
                         <div class="card text-center mb-4">
                           <div class="card-body">
                             <h5 class="card-title">Sold Amount</h5>
-                            <p class="card-text">₹6100</p>
+                            <p class="card-text">{{tp}}</p>
                             <a href="#" class="btn btn-primary">View Details</a>
                           </div>
                         </div>
