admin portion updated

--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/orders/orders.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/orders/orders.component.html
@@ -62,6 +62,7 @@
                         <th>Payment ID</th>
                         <th>Order Date</th>
                         <th>Actions</th>
+                        <th>Delete</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -88,6 +89,13 @@
                           >
                             Cancel
                           </button>
+                        </td>
+                        <td>
+                          <button 
+                          class="btn btn-danger btn-sm" 
+                          (click)="onDelete(order.OrderDetailsId)">
+                          Delete
+                        </button>
                         </td>
                       </tr>
                     </tbody>
