--- a/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
+++ b/Angular_cafe_Mgm/Cafe-app/src/app/admin/categories/categories.component.html
@@ -75,7 +75,7 @@
                             <td>{{p.Name}}</td>
                             <td>  <img [src]="p.ImageUrl" [alt]="p.Name"> </td>
                             <td>{{p.IsActive}}</td>
-                           <td>{{p.CreatedDate}}</td>
+                           <td>{{p.CreatedDate | date}}</td>
                            <td><i class="bi bi-trash3" (click)="onDelete(p.CategoryId)"></i></td>
                            <td><i class="bi bi-pencil-square" (click)="fillData(p)"></i></td>
                            
@@ -95,58 +95,33 @@
             <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
 
                 <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text bg-white text-warning">
-                                <!-- <i class="bi bi-tag" [class.bg-success.subtle]="CategoryName.valid" 
-                                [class.bg-danger]="CategoryName.invalid && CategoryName.touched"></i> -->
-                                <input type="text" class="form-control" name="Name" #Name="ngModel"
-                                 [(ngModel)]="objs.cData.Name" placeholder="Category Name" required>
-                            </div>
-                        </div>
-                    </div>
+                   <input type="text" class="form-control" name="Name" #Name="ngModel"
+                    [(ngModel)]="objs.cData.Name" placeholder="Category Name" required>
                 </div>
             
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text bg-white text-warning">
-                                <!-- <i class="bi bi-image" [class.bg-success.subtle]="ImageUrl.valid" 
-                                [class.bg-danger]="ImageUrl.invalid && ImageUrl.touched"></i> -->
-                                 <input type="url" class="form-control" name="ImageUrl" #ImageUrl="ngModel"
-                                 [(ngModel)]="objs.cData.ImageUrl" placeholder="Image URL" required> 
+        
 
-                                  <!-- <div class="form-group pt-3">
-                                    <label for="imageUpload" class="font-weight-bold">Upload Image</label>
-                                    <div class="input-field">
-                                        <input type="file" (change)="onFileSelected($event)" />
-                                    </div>
-                                </div>  -->
-
-                            </div>
+                <div class="form-group pt-3">
+                    <label for="imageUpload" class="font-weight-bold">Upload Image</label>
+                        <div class="input-field">
+                            <input type="file" (change)="onFileSelected($event)" />
                         </div>
-                    </div>
-                </div>
-            
+                </div> 
+
+             
                 <div class="form-group">
-                    <div class="input-group">
+                   
                         <div class="input-group-text">
                             <input type="checkbox" class="form-check-input" name="IsActive" [(ngModel)]="objs.cData.IsActive">
                             <label class="form-check-label">Is Active</label>
                         </div>
-                    </div>
+                    
                 </div>
             
                 <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text bg-white text-warning">
-                                <!-- <i class="bi bi-calendar" [class.bg-success.subtle]="CreatedDate.valid" 
-                                [class.bg-danger]="CreatedDate.invalid && CreatedDate.touched"></i> -->
-                                <input type="date" class="form-control" name="CreatedDate" #CreatedDate="ngModel"
-                                 [(ngModel)]="objs.cData.CreatedDate" required>
-                            </div>
-                        </div>
+                    <div class="input-group-text bg-white text-warning">
+                    <input type="date" class="form-control" name="CreatedDate" #CreatedDate="ngModel"
+                    [(ngModel)]="objs.cData.CreatedDate" required>
                     </div>
                 </div>
             
